tests/transpiler/x/zig/in_operator_extended.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/in_operator_extended.zig:13:9: error: local variable is never mutated
/workspace/mochi/tests/transpiler/x/zig/in_operator_extended.zig:13:9: note: consider using 'const'
